# DownloadBook-pdf-handler

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
font/: README.md
hooks/: pyinstaller.py
src/: __init__.py  book.py  chapter.py  collection.py  common.py  cookies.py  exceptions.py  login.py  print_mw_collection.py  render_pdf.py  section.py  settings.py  structure.py  text_handler.py  toc.py  wiki_link.py  wiki_page.py
src/downloadbook_pdf_handler/: book.py  chapter.py  collection.py  common.py  extract_font_sizes.py  extract_urls.py  login.py  print_mw_collection.py  render_pdf.py  section.py  settings.py  structure.py  toc.py  wiki_page.py
