[project]
name = "downloadbook_pdf_handler"
version = "0.1.0"
description = "A PDF creator for MediaWiki sites that use DownloadBook"
authors = [{name = "Mark A. Hershberger", email="mah@nichework.com"}]
packages = [{ from = "src" }]
license = "gpl-3-or-later"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "defusedxml>=0.7.1",
    "httpx>=0.28.1",
    "lxml>=5.4.0",
    "mwclient>=0.11.0",
    "pikepdf>=9.7.0",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pyinstaller>=6.13.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3"]

[project.scripts]
render_pdf = "downloadbook_pdf_handler.render_pdf:main"
print_mw_collection = "downloadbook_pdf_handler.print_mw_collection:main"
extract_font_sizes = "downloadbook_pdf_handler.extract_font_sizes:main"
extract_urls = "downloadbook_pdf_handler.extract_urls:main"
login = "downloadbook_pdf_handler.login:main"

[dependency-groups]
dev = [
    "flake8-pyproject>=1.2.3",
    "icecream>=2.1.4",
    "mkdocs>=1.6.1",
    "numpydoc>=1.8.0",
    "poetry-pyinstaller-plugin>=1.4.0",
    "pycompile>=0.2.3",
    "pylint>=3.3.6",
    "pylsp-mypy>=0.7.0",
    "pyproject-pre-commit>=0.4.1",
    "python-lsp-server>=1.12.2",
    "types-defusedxml>=0.7.0.20240218",
    "types-lxml>=2025.3.30",
    "types-paramiko>=3.5.0.20240928",
    "types-requests>=2.32.0.20250328"]

[tool.numpydoc_validation]
# all except these listed
checks = ["all","EX01","SA01","ES01"]

# remember to use single quotes for regex in TOML
exclude = ['\.undocumented_method$', '\.__repr__$']
override_SS05 = ['^Process ', '^Assess ', '^Access ']

[tool.pylint]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.tox|\.venv|build|dist)/'

[tool.flake8]
max-line-length = 120
ignore = ["N815", "D100", "D101", "D107", "W503", "E116", "E262", "RST301"]

[tool.isort]
profile = "black"
multi_line_output = 3
py_version = 312

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["ansible.*", "inventory.*", "python_terraform.*", "linode_api4.*", "api4jenkins.*", "icecream.*", "mwclient.*"]
ignore_missing_imports = true

[tool.bandit]
skips = ["B404", "B506", "B603", "B606", "B701"]

[tool.pylsp.plugins.pylsp_mypy]
enabled = true

[tool.pylsp.plugins.black]
enabled = true

[tool.pylsp.plugins.isort]
enabled = true

[tool.pylsp.plugins.flake8]
enabled = true

[tool.pylsp.plugins.mccabe]
enabled = true

[tool.pylsp.plugins.pylint]
enabled = false

[tool.pylsp.plugins.pycodestyle]
enabled = false

[tool.poetry-pyinstaller-plugin]
exclude-include = true
pre-build = "hooks.pyinstaller:pre_build"
post-build = "hooks.pyinstaller:post_build"

[tool.poetry-pyinstaller-plugin.scripts]
render_pdf = {source="src/render_pdf.py", type="onefile", bundle=true}

[tool.poetry-pyinstaller-plugin.include]
"font" = "font"
